# BRPRobotComm

./: CMakeLists.txt  ProstateRobotCalibrationPhase.cpp  ProstateRobotCommunicationBase.cpp  ProstateRobotCommunicationBase.hpp  ProstateRobotMoveToTargetPhase.cpp  ProstateRobotPhaseBase.cpp  ProstateRobotPlanningPhase.hpp  ProstateRobotStartUpPhase.cpp  ProstateRobotStatus.cpp  README.md  main.cxx
Communication/OpenIGTLink/NeuroRobotCommunication/: NeuroRobotCalibrationPhase.cpp  NeuroRobotCalibrationPhase.hpp  NeuroRobotCommunicationBase.cpp  NeuroRobotCommunicationBase.hpp  NeuroRobotDrapingPhase.cpp  NeuroRobotDrapingPhase.hpp  NeuroRobotEmergencyPhase.cpp  NeuroRobotEmergencyPhase.hpp  NeuroRobotManualPhase.cpp  NeuroRobotManualPhase.hpp  NeuroRobotMoveToTargetPhase.cpp  NeuroRobotMoveToTargetPhase.hpp  NeuroRobotPhaseBase.cpp  NeuroRobotPhaseBase.hpp  NeuroRobotPlanningPhase.cpp  NeuroRobotPlanningPhase.hpp  NeuroRobotStartUpPhase.cpp  NeuroRobotStartUpPhase.hpp  NeuroRobotStatus.cpp  NeuroRobotStatus.hpp  NeuroRobotStopPhase.cpp  NeuroRobotStopPhase.hpp  NeuroRobotTargetingPhase.cpp  NeuroRobotTargetingPhase.hpp  NeuroRobotUndefinedPhase.cpp  NeuroRobotUndefinedPhase.hpp
Communication/OpenIGTLink/ProstateRobotCommunication/: ProstateRobotEmergencyPhase.cpp  ProstateRobotManualPhase.cpp  ProstateRobotManualPhase.hpp  ProstateRobotMoveToTargetPhase.cpp  ProstateRobotPhaseBase.hpp  ProstateRobotStartUpPhase.hpp  ProstateRobotStatus.hpp  ProstateRobotTargetingPhase.hpp
Communication/SPI/: CMakeLists.txt  SPI.cpp  SPI.hpp
Communication/Server/: CMakeLists.txt  CustomWebServer.cpp  CustomWebServer.hpp  picojson.h
Communication/Server/SimpleServer/: client_http.hpp  server_http.hpp  utility.hpp
ProstateRobotCommunication/: CMakeLists.txt  OpenIGTLink.cpp  OpenIGTLink.h  ProstateRobotCalibrationPhase.hpp  ProstateRobotEmergencyPhase.hpp  ProstateRobotMoveToTargetPhase.hpp  ProstateRobotPhaseBase.cpp  ProstateRobotPlanningPhase.cpp  ProstateRobotStatus.cpp  ProstateRobotStopPhase.cpp  ProstateRobotStopPhase.hpp  ProstateRobotTargetingPhase.cpp  ProstateRobotUndefinedPhase.cpp  ProstateRobotUndefinedPhase.hpp
testing/: CMakeLists.txt  OpenIGTLink.hpp  main.cxx
testing/OpenIGTLink/: CMakeLists.txt  OpenIGTLink.cpp
testing/ProstateRobot/: CMakeLists.txt  ProstateRobot.cpp  ProstateRobot.hpp
testing/Robots/ProstateRobot/: CMakeLists.txt  ProstateRobot.hpp
testing/src/: CMakeLists.txt  CommModuleTest.cpp  CommModuleTest.hpp  main.cxx
testing/src/Communication/OpenIGTLink/: CMakeLists.txt  OpenIGTLink.cpp  OpenIGTLink.hpp
testing/src/Kinematics/BicycleKinematics/: BicycleKinematics.cpp  BicycleKinematics.h  CMakeLists.txt
testing/src/Kinematics/ProstateKinematics/: CMakeLists.txt  ProstateKinematics.cpp  ProstateKinematics.hpp
testing/src/NeedleSteeringAlgorithms/: SteeringAlgorithm.cpp  SteeringAlgorithm.h
testing/src/NeedleSteeringAlgorithms/CurvSteering/: CMakeLists.txt  CurvSteering.cpp  CurvSteering.h
testing/src/Robots/: Robot.hpp
testing/src/Robots/ProstateRobot/: CMakeLists.txt  ProstateRobot.cpp  ProstateRobot.hpp
testing/src/Robots/ProstateRobot/ProstateRobotKinematicsController/: CMakeLists.txt  ProstateRobotKinematicsController.cpp  ProstateRobotKinematicsController.hpp
testing/src/Robots/ProstateRobot/ProstateRobotModes/: CMakeLists.txt  ProstateRobotActiveSteeringMode.cpp  ProstateRobotActiveSteeringMode.hpp  ProstateRobotAutomatedHomingMode.cpp  ProstateRobotAutomatedHomingMode.hpp  ProstateRobotClinicalMode.cpp  ProstateRobotClinicalMode.hpp  ProstateRobotFrequencySweepMode.cpp  ProstateRobotFrequencySweepMode.hpp  ProstateRobotManualMode.cpp  ProstateRobotManualMode.hpp  ProstateRobotModeBase.cpp  ProstateRobotModeBase.hpp
testing/src/Robots/ProstateRobot/ProstateRobotMotionController/: CMakeLists.txt  ProstateRobotMotionController.cpp  ProstateRobotMotionController.hpp
testing/src/Robots/ProstateRobot/ProstateRobotMotors/: CMakeLists.txt  ProstateRobotMotors.cpp  ProstateRobotMotors.hpp
testing/src/Robots/ProstateRobot/ProstateRobotSensors/: CMakeLists.txt  ProstateRobotSensors.cpp  ProstateRobotSensors.hpp
testing/src/Robots/ProstateRobot/ProstateRobotUtils/: CMakeLists.txt  ProstateRobotConstants.hpp  ProstateRobotEnumerations.hpp
testing/src/Utilities/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
testing/src/Utilities/PolynomialFit/: CMakeLists.txt  PolyFit.cxx  PolyFit.h
testing/src/Utilities/Timer/: CMakeLists.txt  Timer.cpp  Timer.hpp
